<resources>
    <string name="app_name">SalesSupport</string>

    <string name="activity_loading">Loading...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="fragment_view_city">View Areas</string>
    <string name="fragment_view_cluster">View Cluster</string>
    <string name="fragment_view_cluster_detail">View Cluster Detail</string>
    <string name="fragment_view_homepass">View Available Homepass</string>
    <string name="fragment_view_salesorder">Create New Sales Order</string>


    <string name="fragment_cluster_homepass">Total Homepass</string>

    <string name="fragment_cluster_detail_subsname">Subs Name</string>
    <string name="fragment_cluster_detail_subsid">Subs ID</string>
    <string name="fragment_cluster_detail_sadate">SA Date</string>
    <string name="fragment_cluster_detail_internetpacket">Internet Package</string>
    <string name="fragment_cluster_detail_tvpacket">TV Package</string>
    <string name="fragment_cluster_detail_status">Status</string>

    <string name="fragment_homepass_note">Tap the list to create SO / Survey</string>
    <string name="fragment_homepass_already_taken">This homepass already taken</string>
    <string name="fragment_homepass_status_taken">Taken</string>
    <string name="fragment_homepass_status_available">Available</string>

    <string name="fragment_sales_salesrefferal">Sales and Referral</string>
    <string name="fragment_sales_agent_code">Sales Agent Code</string>
    <string name="fragment_sales_agent_name">Sales Agent Name</string>
    <string name="fragment_sales_event_rep_id">Event Rep ID</string>
    <string name="fragment_sales_customer_ref_id">Customer Referral ID</string>
    <string name="fragment_sales_know_us">How do you know us ?</string>
    <string name="fragment_sales_promo_code">Promo Code (if any)</string>
    <string name="fragment_sales_billing_address">Billing Address</string>
    <string name="fragment_sales_billing_address_desc">Your Billing Address Same as Service Address ?</string>

    <string name="fragment_customer_profile">Customer Profile</string>
    <string name="fragment_customer_salutation">Salutation</string>
    <string name="fragment_customer_full_name">Full Name</string>
    <string name="fragment_customer_prefered_name">Prefered Name</string>
    <string name="fragment_customer_nationality">Nationality</string>
    <string name="fragment_customer_id_type">KTP / Sim / Passport</string>
    <string name="fragment_customer_dob">Date Of Birth</string>
    <string name="fragment_customer_gender">Gender</string>
    <string name="fragment_customer_email">Email</string>
    <string name="fragment_customer_mobile_phone">Mobile Phone</string>
    <string name="fragment_customer_home_phone">Home Phone</string>
    <string name="fragment_customer_work_phone">Work Phone</string>
    <string name="fragment_customer_upload_id">Upload KTP</string>
    <string name="fragment_customer_upload_other">Upload Other Document</string>
    <string name="fragment_customer_upload_selfie">Upload Selfie With Customer</string>
    <string name="fragment_customer_upload_take_photo">Take a Photo</string>
    <string name="fragment_customer_upload_gallery">Load Gallery</string>

    <string name="fragment_authorized_officer_cp">Contact Person</string>
    <string name="fragment_authorized_officer_full_name">Full Name</string>
    <string name="fragment_authorized_officer_prefered_name">Preferred Name</string>
    <string name="fragment_authorized_officer_designation">Designation</string>
    <string name="fragment_authorized_officer_ktp">KTP/Sim/ Passport</string>
    <string name="fragment_authorized_officer_dob">Date of Birth</string>
    <string name="fragment_authorized_officer_email">Email</string>
    <string name="fragment_authorized_officer_mobile">Mobile</string>
    <string name="fragment_authorized_officer_work_phone">Work Phone</string>

    <string name="fragment_plan_create">Create Plan</string>
    <string name="fragment_plan_internet_package">Internet Package</string>
    <string name="fragment_plan_ont_package">ONT</string>
    <string name="fragment_plan_tv_package">TV Package</string>
    <string name="fragment_plan_stb">STB</string>
    <string name="fragment_plan_alacarte">Tv Add-on</string>
    <string name="fragment_plan_internet_addon">Service Add-on</string>
    <string name="fragment_plan_hardware">Hardware</string>
    <string name="fragment_plan_movies">Movies</string>
    <string name="fragment_plan_sport">Sport</string>
    <string name="fragment_plan_xtras">Xtras</string>
    <string name="fragment_plan_ip_public">IP Public</string>
    <string name="fragment_plan_promotion">Promotion</string>
    <string name="fragment_plan_remarks">Remarks</string>

    <string name="fragment_verification">Customer Verification</string>
    <string name="fragment_verification_desc">Please enter the code that has been sent to :</string>
    <string name="fragment_verification_status">Status</string>
    <string name="fragment_verification_status_insert_order">Creating Order</string>
    <string name="fragment_verification_status_upload_doc">Uploading Document</string>
    <string name="fragment_verification_status_upload_id">Uploading ID Picture</string>
    <string name="fragment_verification_status_upload_other_doc">Uploading Other Document Picture</string>
    <string name="fragment_verification_customer_id">Customer ID</string>
    <string name="fragment_verification_subscription_id">Subscription ID</string>
    <string name="fragment_verification_order_id">Order ID</string>
    <string name="fragment_verification_order_success">Congratulation, your order has been created, the details is as follow :</string>
    <string name="fragment_verification_send_sms_thanks">Sending SMS to customer</string>



    <string name="activity_login_username">Username</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_signin">Login</string>
    <string name="activity_login_invalid">Wrong Username / Password</string>
    <string name="activity_login_retry">Retry</string>
    <string name="activity_login_failed_connect">Failed To Connect</string>
    <string name="activity_login_failed_code">Code</string>
    <string name="activity_login_failed_desc">Description</string>
    <string name="activity_login_failed_permission">You do not have permission to access</string>

    <string name="spinner_competitor_prompt">Choose a Competitor</string>

    <string name="fragment_cluster_id">Cluster ID</string>
    <string name="fragment_cluster_name">Cluster Name</string>
    <string name="fragment_userid">Sales User ID</string>
    <string name="fragment_competitor">Competitor</string>

    <string name="dialog_addcompetitor">Add Competitor</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_content_failedconnect">Failed to connect, please check your internet connection</string>
    <string name="dialog_areas_searchname">Area Name</string>
    <string name="dialog_cluster_searchname">Cluster Name</string>
    <string name="dialog_clusterdetail_searchhomepass">Homepass Name</string>
    <string name="dialog_homepass_action">Choose Action</string>
    <string name="dialog_homepass_customer">Customer Classification</string>
    <string name="dialog_homepass_company_name">Company Name</string>
    <string name="dialog_homepass_npwp">NPWP</string>
    <string name="dialog_homepass_business_type">Business Type</string>
    <string name="dialog_homepass_business_size">Business Size</string>
    <string name="dialog_sales_billing_address">Billing Address</string>
    <string name="dialog_sales_billing_address_desc">Your Billing Address Same as Service Address?</string>
    <string name="dialog_sales_service_address">Service Address</string>
    <string name="dialog_dwelling_type">Dwelling Type</string>
    <string name="dialog_province">Province</string>
    <string name="dialog_city">City</string>
    <string name="dialog_cluster">Cluster</string>
    <string name="dialog_district">District</string>
    <string name="dialog_village">Village</string>
    <string name="dialog_home_number">Home Number</string>
    <string name="dialog_block">Block</string>
    <string name="dialog_main_address">Main Address</string>
    <string name="dialog_floor">Floor</string>
    <string name="dialog_unit">Unit</string>
    <string name="dialog_postal_code">Postal Code</string>
    <string name="dialog_rt">Rukun Tetangga (RT)</string>
    <string name="dialog_rw">Rukun Warga (RW)</string>
    <string name="dialog_address_prefix">Address Prefix</string>
    <string name="dialog_building_name">Building Name</string>
    <string name="dialog_developer_complex">Developer Complex</string>
    <string name="dialog_developer_sector">Developer Sector</string>

    <string name="tabhost_create_order">Create Order</string>
    <string name="tabhost_create_survey">Create Survey</string>
    <string name="tabhost_authorized_officer">Authorized Officer</string>
    <string name="tabhost_technical_contact">Technical Contact</string>

    <string name="button_confirm">Confirm</string>
    <string name="button_copy">Copy</string>
    <string name="button_ok">OK</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_resend">Resend</string>
    <string name="status_progress">In Progress</string>
    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>

    <string-array name="competitor_arrays">
        <item>Firstmedia</item>
        <item>MNC Play</item>
        <item>Indiehome</item>
    </string-array>

    <string-array name="customer_class_arrays">
        <item>RES</item>
        <item>SME</item>
    </string-array>

    <string-array name="customer_reff_arrays">
        <item>Internet</item>
        <item>Other</item>
    </string-array>

    <string-array name="salutation_arrays">
        <item>Mr</item>
        <item>Mrs</item>
    </string-array>

    <string-array name="nationality_arrays">
        <item>Indonesian</item>
        <item>Foreigner</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="alacarte_arrays">
        <item>Movies</item>
        <item>Sport</item>
        <item>Xtras</item>
        <!--<item>IP Public</item>-->
    </string-array>

    <string-array name="service_arrays">
        <item>IP Public</item>
    </string-array>

    <string-array name="dwelling_type_arrays">
        <item>Single Dwelling Unit</item>
        <item>Multiple Dwelling Unit</item>
    </string-array>

    <string-array name="address_prefix_arrays">
        <item>Desa</item>
        <item>Dukuh</item>
        <item>Gang</item>
        <item>Hotel</item>
        <item>Jalan</item>
        <item>Jorong</item>
        <item>Kampung</item>
        <item>Kantor Pemerintah</item>
        <item>Kantor Pemerintah Swasta</item>
        <item>Kawasan Industri</item>
        <item>Kecamatan</item>
        <item>Kelurahan</item>
        <item>Kompleks Industri Kecil</item>
        <item>Kompleks Militer</item>
        <item>Kompleks Pertokoan</item>
        <item>Kompleks Perumahan</item>
        <item>Kompleks Perusahaan Besar</item>
        <item>Kompleks Sekolah</item>
        <item>Kota</item>
        <item>Lingkungan</item>
        <item>Lokasi Transmigrasi</item>
        <item>Lorong</item>
        <item>Pasar</item>
        <item>Perwakilan Kecamatan</item>
        <item>Pulau</item>
        <item>Rumah Pos</item>
        <item>Tempat Lainnya</item>
        <item>None</item>
    </string-array>


</resources>
