<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:id="@+id/homepass_list_header"
        android:background="@color/white"
        android:layout_height="45dp">

        <ImageView
            android:id="@+id/icon_title"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:srcCompat="@mipmap/icon_plan" />

        <TextView
            android:id="@+id/customer_txt_create_plan"
            android:layout_toRightOf="@id/icon_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="5dp"
            android:text="@string/fragment_plan_create"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/colorLogo4" />

        <View
            android:layout_height="2dp"
            android:layout_below="@id/customer_txt_create_plan"
            android:background="@color/colorLogo"
            android:layout_width="match_parent" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/plan_scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <id.co.myrepublic.salessupport.widget.CustomSpinner
                android:id="@+id/plan_spinner_ont_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:validator="required"
                app:labelText="@string/fragment_plan_ont_package" />

            <id.co.myrepublic.salessupport.widget.CustomSpinner
                android:id="@+id/plan_spinner_internet_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:validator="required"
                app:labelText="@string/fragment_plan_internet_package" />


            <id.co.myrepublic.salessupport.widget.CustomSpinner
                android:id="@+id/plan_spinner_tv_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:labelText="@string/fragment_plan_tv_package" />

            <id.co.myrepublic.salessupport.widget.CustomSpinner
                android:id="@+id/plan_spinner_stb_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:labelText="@string/fragment_plan_stb" />

            <id.co.myrepublic.salessupport.widget.Checkboxes
                android:id="@+id/plan_checkboxes_alacarte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                app:labelText="@string/fragment_plan_alacarte" />

            <id.co.myrepublic.salessupport.widget.Checkboxes
                android:id="@+id/plan_checkboxes_internet_addon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                app:labelText="@string/fragment_plan_internet_addon" />


            <id.co.myrepublic.salessupport.widget.CustomSpinner
                android:id="@+id/plan_spinner_hardware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:labelText="@string/fragment_plan_hardware" />


            <id.co.myrepublic.salessupport.widget.CustomSpinner
                android:id="@+id/plan_spinner_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:labelText="@string/fragment_plan_promotion" />


            <id.co.myrepublic.salessupport.widget.CustomEditText
                android:id="@+id/plan_editText_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:inputType="textMultiline"
                app:inputHeight="100dp"
                app:labelText="@string/fragment_plan_remarks" />



            <Button
                android:id="@+id/plan_btn_confirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/button_blue"
                android:text="@string/button_confirm" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>