<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogitem_txt_competitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/fragment_competitor" />

    <Spinner
        android:id="@+id/dialogitem_spinner_competitor"
        android:layout_width="300dp"
        android:spinnerMode="dropdown"
        android:layout_gravity="center"
        android:background="@drawable/spinner_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        android:prompt="@string/spinner_competitor_prompt"
        android:entries="@array/competitor_arrays"

        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialogitem_txt_clusterid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/fragment_cluster_id" />

    <TextView
        android:id="@+id/dialogitem_txt_clusterid_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="43433" />

    <TextView
        android:id="@+id/dialogitem_txt_clustername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/fragment_cluster_name" />

    <TextView
        android:id="@+id/dialogitem_txt_clustername_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="AMERICA" />

    <TextView
        android:id="@+id/dialogitem_txt_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/fragment_userid" />

    <TextView
        android:id="@+id/dialogitem_txt_userid_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="32243" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="50dp">

        <Button
            android:id="@+id/dialogitem_btn_send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:text="@string/button_ok" />

        <Button
            android:id="@+id/dialogitem_btn_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:text="@string/button_cancel" />
    </LinearLayout>



</LinearLayout>