<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verification_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:paddingBottom="5dp"
        android:text="@string/fragment_verification"
        android:textStyle="bold"
        android:textSize="33dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <View
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorLogo"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/verification_txt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/fragment_verification_desc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/verification_txt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/verification_editText_phone_prefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:ems="10"
            android:inputType="phone"
            android:text="" />

        <EditText
            android:id="@+id/verification_editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:ems="10"
            android:inputType="phone"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/verification_btn_resend"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:text="@string/button_resend" />

        <Button
            android:id="@+id/verification_btn_confirm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:text="@string/button_confirm" />
    </LinearLayout>

</LinearLayout>